# comfy-aimdo

./: .gitignore  MULTIGPU_PLAN.md  README  README.md  build  build-linux-docker  build-rocm  build-rocm-local  build-rocm-local_win.ps1  build-win-xpu.bat  build.bat  foo.c  foo.cpp  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  wheels.yml
aimdo/: allocator.py  control.py  model_vbar.py
comfy-aimdo/: control.py  model_vbar.py
comfy_aimdo/: control.py  host_buffer.py  model_mmap.py  model_rbar.py  model_vbar.py  torch.py  vram_buffer.py  xfer_engine.py
examples/: example.py  xpu_comfyui_offload.py  xpu_smoke.py
scripts/: build-linux-aimdo.sh
src/: aimdo-memcpy.c  aimdo-time.h  aimdo.c  control.c  control.h  debug.c  dynbuf.c  dynbuf.h  gpu_abi.h  gpu_dispatch.h  hostbuf-file-reader.c  hostbuf-prewarm.c  hostbuf-prewarm.h  hostbuf.c  model-vbar.c  plat-thread.h  plat.h  plat_hip.h  pyt-cu-plug-alloc-async.c  pyt-cu-plug-alloc.c  shmem-detect.c  torch.c  vrambuf.c  vrambuf.h  xfer-file.c  xfer-file.h
src-cuda/: dispatch.c
src-posix/: cuda-hook.c  detour-hip.c  model-mmap.c  plat-thread.c  torch.c  xfer-file-plat.c  ze-funchooks.c
src-win/: cuda-detour.c  model-mmap.c  plat-thread.c  shmem-detect.c  torch.c  xfer-file-plat.c  xfer-file.c
src-xpu/: dispatch.c  ze-detour.c  ze-hooks-shared.h  ze-shim.c  ze-shim.h
src/win/: model-rbar.c  shmem-detect.c
