[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimdo"
version = "0.0.1"
dependencies = ["torch>=2.6.0"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"aimdo" = ["*.so", "*.dll"]

[tool.setuptools.dist-info]
tag-platform = "linux_x86_64"
