[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimdo"
version = "0.0.1"
dependencies = ["torch>=2.6.0"]

[tool.setuptools]
ext-modules = [
    { name = "aimdo._libvbar", sources = [] }
]

[tool.setuptools.package-data]
"aimdo" = ["*.so", "*.dll"]
