[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-aimdo"
dynamic = ["version"]

[tool.setuptools.package-data]
"comfy-aimdo" = ["*.so", "*.dll"]

[tool.setuptools_scm]
version_file = "comfy-aimdo/_version.py"
